--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
+  http: ^1.2.2
 
   # Firebase
   firebase_core: ^4.0.0
